fixed domain bug

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="form_container">
         <h1>Amazon Scrapper</h1>
         <p>Use the input below to search any product you want from amazon!</p>
-        <p>Some prices might be unavailable due to the product having multiple cosmetic/funcional options. You can click on the title to be redirected to the oficial website</p>
+        <p>Some prices might be unavailable due to the product having multiple cosmetic/funcional options. In this case You can click on the title to be redirected to the oficial website</p>
         
         <input id="keyword" type="text" placeholder="Search keyword here">
         <button class="custom_btn" id="btnSearch">Search</button>
